# Trackrr

./: .gitignore  README.md  main.py  pyproject.toml  quick_prompts.py  utils.py  validators.py
trackrr/: __init__.py  db.py  enums.py  prompt.py  tracks.py
